[package]
name                    = "heap-oneshot-combinator"
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "Apache-2.0"

keywords = []
categories = []
homepage                = "https://github.com/cosmicexplorer/heap-oneshot-combinator"
repository              = "https://github.com/cosmicexplorer/heap-oneshot-combinator"

[dependencies]
